--- a/day11/main.css
+++ b/day11/main.css
@@ -16,22 +16,7 @@ body {
     border : 1px solid white
 }
 
-.box-2 {
+.container{
     display: flex;
-    width: 120px;
-    height: 64px;
-    background-color:black;
-    color:green;
-    align-items: center;
-    border : 1px solid white
-}
-
-.box-3 {
-    display: flex;
-    width: 120px;
-    height: 64px;
-    background-color:black;
-    color:green;
-    align-items: flex-end;
-    border : 1px solid white
+    flex-direction: row;
 }
